fix: no overflow on background image

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow: hidden;
   }
 }
 #supercell {
